@@ -1,6 +1,8 @@
 glibc (2.21-5) UNRELEASED; urgency=medium
 
-  * 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/cvs-libpthread-api.diff: Update patch, add missing throw
+    specifications.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Dec 2015 23:25:07 +0100
 
